objects/Accounting_Period__c/Accounting_Period__c.object-meta.xml
<CustomObject>
    <label>Accounting Period</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounting Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>