objects/Accounting_Period__c/fields/Fiscal_year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_year__c</fullName>
    <label>Fiscal Year</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>