objects/Accounting_Period__c/fields/New_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>New_Fiscal_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Fiscal Year</label>
    <type>Checkbox</type>
</CustomField>