objects/Accounting_Period__c/listViews/X2021.listView-meta.xml
<ListView>
    <fullName>X2021</fullName>
    <columns>NAME</columns>
    <columns>New_Fiscal_Year__c</columns>
    <columns>Fiscal_year__c</columns>
    <columns>Fiscal_Period__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Closed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fiscal_year__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </filters>
    <label>2022</label>
</ListView>